--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.body {
+  background-color: rgb(39 39 42);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+
+  .btn-blue {
+    @apply w-64 h-8 bg-sky-500 text-center rounded-lg hover:bg-cyan-600 hover:text-white mx-auto my-4 hover:border-2
+  }
+  .input-blue {
+    @apply w-64 h-8 mx-auto my-4 rounded-lg border-blue-500 border-2 px-2 
+  }
+  .input-search {
+    @apply w-48 h-8 m-auto ml-0 rounded-lg border-blue-500 border-2 pl-6 pr-2 text-black bg-center bg-left bg-no-repeat bg-[url('./images/search.svg')]
+  }
+  .small-btn-blue {
+    @apply w-8 h-8 bg-sky-500 text-center rounded-lg hover:bg-cyan-600 hover:text-white m-2 hover:border-2
+  }
+  .small-btn-red {
+    @apply w-8 h-8 bg-red-500 text-center rounded-lg hover:bg-red-600 hover:text-white m-2 hover:border-2
+  }
+  .white-small-icon {
+    @apply w-8 h-8 bg-white text-center rounded-lg my-auto
+  }
+  .inputs-container {
+    @apply flex flex-col m-auto text-center p-8 max-w-sm bg-slate-600 border-solid border-2 mt-28
+  }
+  .err-text {
+    @apply text-red-600 -mt-3
+  }
+
+  .hiden {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s, visibility 0s 1s;
+  }
+
+  .popup {
+    font-family: 'Inter', Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    width: 100%;
+    min-height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    position:fixed;
+    top: 0px;
+    left: 0px;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 1s, opacity 0.3s linear;
+  }
+
+  .popup_opened {
+    visibility: visible;
+    opacity: 1;
+  }
 }
