--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,16 @@
     @apply w-8 h-8 bg-white text-center rounded-lg my-auto
   }
   .inputs-container {
-    @apply flex flex-col m-auto text-center p-8 max-w-sm bg-slate-600 border-solid border-2 mt-28
+    @apply flex flex-col mx-auto mt-16 text-center p-8 max-w-sm bg-slate-600 border-solid border-2
   }
-  .err-text {
-    @apply text-red-600 -mt-3
+  .input {
+    @apply py-2 pl-2 pr-8 mb-8 w-full rounded-md border border-slate-300 focus:outline-none focus:border-sky-600 focus:ring-1 focus:ring-sky-600
+  }
+  .input_error {
+    @apply border-pink-600 focus:border-pink-600 focus:ring-red-600 text-pink-600
+  }
+  .text_error {
+    @apply text-pink-600 text-start absolute left-0 bottom-2
   }
 
   .hiden {
