--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
     @apply w-8 h-8 bg-white text-center rounded-lg my-auto
   }
   .inputs-container {
-    @apply flex flex-col mx-auto mt-16 text-center p-8 max-w-sm bg-slate-600 border-solid border-2
+    @apply flex flex-col mx-auto text-center p-8 max-w-sm
   }
   .input {
     @apply py-2 pl-2 pr-8 mb-8 w-full rounded-md border border-slate-300 focus:outline-none focus:border-sky-600 focus:ring-1 focus:ring-sky-600
